--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2024"
 
 [dependencies]
 poem = "3.1.12"
+serde_json = "1.0.142"
+serde = { version = "1.0.219", features = ["derive"] }
 tokio = {version = "1.47.1" , features = ["full"]}
+store= {path= "../store"}
