--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,3 +9,5 @@ serde_json = "1.0.142"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = {version = "1.47.1" , features = ["full"]}
 store= {path= "../store"}
+dotenvy = "0.15.7"
+jsonwebtoken = "9"
