--- a/backend/store/Cargo.toml
+++ b/backend/store/Cargo.toml
@@ -8,3 +8,4 @@ chrono = "0.4.41"
 diesel = { version = "2.2.0", features = ["postgres","chrono"] }
 uuid = { version = "1.17.0", features = ["v4"] }
 dotenvy = "0.15.7"
+bcrypt = "0.17.0"
