--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver="3"
-members = ["api", "pusher", "store", "worker"]
+members = ["api", "pusher", "redis-client", "store", "worker"]
