--- a/backend/pusher/Cargo.toml
+++ b/backend/pusher/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 redis = "0.32.5"
 redis-client = {path = "../redis-client"}
+store= { path = "../store"}
+tokio = {version = "1.47.1" , features = ["full"]}
+dotenvy = "0.15.7"
