--- a/backend/redis-client/Cargo.toml
+++ b/backend/redis-client/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dotenvy = "0.15.7"
 redis = { version = "0.32.5", features = ["tokio-comp"] }
 tokio = { version =  "1.47.1", features = ["full"] }
