--- a/backend/worker/Cargo.toml
+++ b/backend/worker/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+redis = "0.32.5"
+redis-client = {path = "../redis-client"}
+store= { path = "../store"}
+tokio = {version = "1.47.1" , features = ["full"]}
+dotenvy = "0.15.7"
+anyhow = "1.0.99"
