--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,4 +11,4 @@ tokio = {version = "1.47.1" , features = ["full"]}
 store= {path= "../store"}
 dotenvy = "0.15.7"
 jsonwebtoken = "9"
-chrono = "0.4.41"
+chrono = {version = "0.4.41",  features = ["serde"]}
