--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -9,3 +9,5 @@ diesel = { version = "2.2.0", features = ["postgres","chrono"] }
 uuid = { version = "1.17.0", features = ["v4"] }
 dotenvy = "0.15.7"
 bcrypt = "0.17.0"
+serde_json = "1.0.142"
+serde = { version = "1.0.219", features = ["derive"] }
